--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.3.4",
+    "classnames": "^2.2.6",
     "meteor-node-stubs": "^0.4.1",
+    "node-wikipedia": "^0.0.2",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "wikipedia-js": "^0.0.6"
